@@ -1,5 +1,12 @@
 2006-07-30 svu
 
+	* libxklavier/xkl_config_registry.h, libxklavier/xklavier_config.c,
+	libxklavier/xklavier_config_i18n.c, libxklavier/xklavier_private.h,
+	tests/test_config.c: simplifying description charset conversion,
+	adding custom charset (as Andriy requested)
+
+2006-07-30 svu
+
 	* configure.in, libxklavier/Makefile.am: fixing autoconf stuff for
 	modular X
 
